; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..frontendfrontend_driver.c_frontend_driver_can_watch_for_changes.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..frontendfrontend_driver.c_frontend_driver_can_watch_for_changes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @frontend_driver_can_watch_for_changes() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = call %struct.TYPE_3__* (...) @frontend_get_ptr()
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = icmp ne %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %6, %0
  store i32 0, i32* %1, align 4
  br label %13

12:                                               ; preds = %6
  store i32 1, i32* %1, align 4
  br label %13

13:                                               ; preds = %12, %11
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local %struct.TYPE_3__* @frontend_get_ptr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
